# concurrent_computing

./: .gitignore  CMakeLists.txt
array_partial_sums_test/: CMakeLists.txt  Makefile  exercise_1  exercise_1.cpp  exercise_2.cpp  exercise_3.cpp  exercise_4.cpp
array_partial_sums_test/utils/: array_io.cpp  array_tools.h  partial_sum.cpp  partial_sum.h
parallel_computing/: CMakeLists.txt  matrix_multiply1.cpp  matrix_multiply2.cpp  matrix_multiply3.cpp  random_integral.cpp  sum.cpp  sum_block.cpp  sum_for_reduction.cpp  sum_in_arr.cpp  sum_reduction.cpp  time_for_1_stage  time_for_2_stage  time_for_3_stage
single_computing/: CMakeLists.txt  array_sum.cpp  arrays_sum.cpp  bubble_sort.cpp  integral_calculation.cpp  matrix_multiply.cpp  matrix_sum.cpp  matrix_transpose.cpp
single_computing/utils/: array_io.cpp  array_tools.h
utils/: array_io.cpp  array_tools.h
